# SimpleShell

./: .gitignore  CMakeLists.txt  LICENCE  invalid_test.sh  main.cpp  readme.md  test.scr  test.sh
include/SimpleShell/IO/: Console.hpp
include/SimpleShell/Parser/: Parser.hpp  Parser.tpp  ParsingEntity.hpp  ParsingException.hpp
include/SimpleShell/Parser/Entities/: CommandParser.hpp  ExpressionParser.hpp  IoctlParser.hpp  PipeParser.hpp  ProgramParser.hpp  StatementParser.hpp  StringParser.hpp  VariableParser.hpp
include/SimpleShell/Shell/: Shell.hpp
include/SimpleShell/System/: BuiltInCommands.hpp  ChildProcess.hpp  ChildProcess.tpp  Command.hpp  IoController.hpp  IoController.tpp  LocalVariables.hpp  Util.hpp
include/SimpleShell/Util/: ResourceGuard.hpp  Strings.hpp
src/SimpleShell/IO/: Console.cpp
src/SimpleShell/Parser/: Parser.cpp
src/SimpleShell/Parser/Entities/: CommandParser.cpp  ExpressionParser.cpp  IoctlHelper.cpp  IoctlHelper.hpp  IoctlParser.cpp  PipeParser.cpp  ProgramParser.cpp  StatementParser.cpp  StringParser.cpp  VariableParser.cpp
src/SimpleShell/Shell/: Shell.cpp
src/SimpleShell/System/: BuiltInCommands.cpp  ChildProcess.cpp  Command.cpp  IoController.cpp  LocalVariables.cpp  Util.cpp
src/SimpleShell/Util/: ResourceGuard.cpp  Strings.cpp
